@@ -1,5 +1,7 @@
 2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* international/mule.el (make-char): Remove redundancy.
+
 	* emacs-lisp/bytecomp.el (byte-compile-form): The `byte-compile'
 	property may contain an anonymous function rather than a symbol.
 
